29March - director msg , galley

--- a/index.html
+++ b/index.html
@@ -44,13 +44,16 @@
 					<a class="navbar-brand d-flex align-items-center" href="index.html">
 						<img src="/images/index_page/logo.jpeg" alt="Logo" height="100px" width="80vw" class="me-3">
 						<span class="px-3">
-							<span class="d-block" style="white-space: nowrap; font-size: calc(11px + 0.5vw);">Great Mission Public School</span>
-							<span class="d-block" style="white-space: nowrap; font-size: calc(10px + 0.3vw);">An A+ awarded school by CSBE</span>
-							<span class="d-block" style="white-space: wrap; font-size: calc(9px + 0.3vw);">Nursery - XII (Arts, Commerce & Humanities)</span>
+							<span class="d-block" style="white-space: nowrap; font-size: calc(11px + 0.5vw);">Great
+								Mission Public School</span>
+							<span class="d-block" style="white-space: nowrap; font-size: calc(10px + 0.3vw);">An A+
+								awarded school by CSBE</span>
+							<span class="d-block" style="white-space: wrap; font-size: calc(9px + 0.3vw);">Nursery - XII
+								(Arts, Commerce & Humanities)</span>
 						</span>
 					</a>
 				</div>
-				
+
 
 				<div class="col-lg-7 d-flex align-items-center">
 					<div class="row d-flex">
@@ -67,7 +70,7 @@
 									class="icon-phone2"></span></div>
 							<div class="text">
 								<span class="d-none d-sm-block">Call</span>
-								<span style="white-space: nowrap;">+91 1235235598</span>
+								<span style="white-space: nowrap;">7088231459</span>
 							</div>
 						</div>
 						<div class="col-md topper  d-none d-sm-flex align-items-center justify-content-end">
@@ -248,8 +251,8 @@
 						</div>
 						<div class="media-body p-2 mt-3">
 							<h3 class="heading">Certified Teachers</h3>
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-								unorthographic.</p>
+							<p> Our educators are highly qualified and committed to delivering quality education,
+								ensuring each student's academic success.</p>
 						</div>
 					</div>
 				</div>
@@ -260,8 +263,8 @@
 						</div>
 						<div class="media-body p-2 mt-3">
 							<h3 class="heading">Special Education</h3>
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-								unorthographic.</p>
+							<p>We provide tailored support for students with diverse learning needs, fostering an
+								inclusive environment that promotes individual growth and development.</p>
 						</div>
 					</div>
 				</div>
@@ -272,8 +275,8 @@
 						</div>
 						<div class="media-body p-2 mt-3">
 							<h3 class="heading">Book &amp; Library</h3>
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-								unorthographic.</p>
+							<p>Our well-stocked library, managed by certified librarians, offers a wide range of
+								resources to cultivate a love for reading and support academic pursuits.</p>
 						</div>
 					</div>
 				</div>
@@ -284,8 +287,9 @@
 						</div>
 						<div class="media-body p-2 mt-3">
 							<h3 class="heading">Sport Clubs</h3>
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-								unorthographic.</p>
+							<p>We encourage physical fitness and teamwork through various sports clubs, offering
+								students opportunities to excel in athletic activities and build lasting friendships.
+							</p>
 						</div>
 					</div>
 				</div>
@@ -297,14 +301,26 @@
 		<div class="container">
 			<div class="row d-flex">
 				<div class="col-md-5 order-md-last wrap-about wrap-about d-flex align-items-stretch">
-					<div class="img" style="background-image: url(images/about.jpg); border"></div>
+					<div class="img" style="background-image: url(images/index_page/school_building.jpeg);"></div>
 				</div>
 				<div class="col-md-7 wrap-about py-5 pr-md-4 ftco-animate">
-					<h2 class="mb-4">What We Offer</h2>
-					<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it
-						would have been rewritten a thousand times and everything that was left from its origin would be
-						the word.</p>
-					<div class="row mt-5">
+					<h2 class="mb-4">WELCOME TO Great Mission Public School</h2>
+					<p>Great Mission Public School
+						The School Previously Known As Maria Montessori Happy Home Was Founded In The Year 1978 At
+						Ramnagar Started In A Rented Building.
+					</p>
+
+					<p>
+						The Founder Of The School Late Mr. K.B.L. Srivastava, A Psychologist Be Educationist, Who Would
+						Devote His Live To The Cause Of Education. And So, In The Year 1984 The Org. GREAT MISSION
+						EDUCATION SOCIETY OF INDIA Came Into Being Happy Home Was Renamed As GREAT MISSION PUBLIC
+						SCHOOL.
+					</p>
+					<p>
+						GREAT MISSION PUBLIC SCHOOL, Himmatpur Block, Ramnagar (Ntl.) Stands On Main Road In Between
+						Ramnagar & Kashipur 10 To 15 Minutes Ride From Both The Places.
+					</p>
+					<!-- <div class="row mt-5">
 						<div class="col-lg-6">
 							<div class="services-2 d-flex">
 								<div class="icon mt-2 d-flex justify-content-center align-items-center"><span
@@ -365,18 +381,40 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
+				</div>
+			</div>
+			<div class="row d-flex">
+				<div class="col-md-5 order-md wrap-about wrap-about d-flex align-items-stretch">
+					<div class="img"
+						style="background-image: url(images/index_page/director.jpg); border: 3px solid black;"></div>
+				</div>
+				<div class="col-md-7 wrap-about py-5 pr-md-4 ftco-animate">
+					<h2 class="mb-4">Director's Message</h2>
+					<p>It is with a feeling of Great joy that I send my greetings to all of you as we stand at the
+						threshold of commencing a new academic session.
+					</p>
+
+					<p>
+						The comprehensive curriculum at GREAT MISSION students with a head start in today’s competitive
+						environment. It aims at nurturing their character, personality, life values and vocational
+						skills. Our mission is to enable the children master in academics and in critical thinking
+						skills as well as develop communication abilities.
+					</p>
+
 				</div>
 			</div>
 		</div>
 	</section>
 
 
-	<section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(images/bg_3.jpg);"
-		data-stellar-background-ratio="0.5">
+	<section class="ftco-section ftco-counter img" id="section-counter"
+		style="background-image: url(images/index_page/school_building.jpeg);" data-stellar-background-ratio="0.5">
 		<div class="container">
-			<div class="row justify-content-center mb-5 pb-2 d-flex">
-				<div class="col-md-6 align-items-stretch d-flex">
+			<div class="row justify-content-center d-flex">
+				<h2 class="mb-4" style="color: white;">WHY CHOOSE US</h2>
+
+				<!-- <div class="col-md-6 align-items-stretch d-flex">
 					<div class="img img-video d-flex align-items-center"
 						style="background-image: url(images/about-2.jpg);">
 						<div class="video justify-content-center">
@@ -395,7 +433,7 @@
 						roasted parts of sentences fly into your mouth.</p>
 					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It
 						is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-				</div>
+				</div> -->
 			</div>
 			<div class="row d-md-flex align-items-center justify-content-center">
 				<div class="col-lg-12">
@@ -404,8 +442,8 @@
 							<div class="block-18">
 								<div class="icon"><span class="flaticon-doctor"></span></div>
 								<div class="text">
-									<strong class="number" data-number="18">0</strong>
-									<span>Certified Teachers</span>
+									<strong class="number counter-th" data-number="12">0</strong>
+									<span>STANDARD</span>
 								</div>
 							</div>
 						</div>
@@ -413,8 +451,8 @@
 							<div class="block-18">
 								<div class="icon"><span class="flaticon-doctor"></span></div>
 								<div class="text">
-									<strong class="number" data-number="401">0</strong>
-									<span>Students</span>
+									<strong class="number counter-plus" data-number="1600">0</strong>
+									<span>STUDENTS</span>
 								</div>
 							</div>
 						</div>
@@ -422,8 +460,8 @@
 							<div class="block-18">
 								<div class="icon"><span class="flaticon-doctor"></span></div>
 								<div class="text">
-									<strong class="number" data-number="30">0</strong>
-									<span>Courses</span>
+									<strong class="number counter-plus" data-number="60">0</strong>
+									<span>TEACHERS</span>
 								</div>
 							</div>
 						</div>
@@ -431,26 +469,20 @@
 							<div class="block-18">
 								<div class="icon"><span class="flaticon-doctor"></span></div>
 								<div class="text">
-									<strong class="number" data-number="50">0</strong>
-									<span>Awards Won</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-							<div class="block-18">
-								<div class="icon"><span class="flaticon-doctor"></span></div>
-								<div class="text">
-									<strong class="number" data-number="9">0</strong>
+									<strong class="number counter-plus" data-number="9">0</strong>
 									<span>INDUSTRIAL VISITS</span>
 								</div>
 							</div>
 						</div>
+						
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
+
+	
 
 	<section class="ftco-section">
 		<div class="container-fluid px-4">
@@ -864,35 +896,35 @@
 		<div class="container-wrap">
 			<div class="row no-gutters">
 				<div class="col-md-3 ftco-animate">
-					<a href="images/image_1.jpg" class="gallery image-popup img d-flex align-items-center"
-						style="background-image: url(images/course-1.jpg);">
-						<div class="icon mb-4 d-flex align-items-center justify-content-center">
+					<a href="images/index_page/WhatsApp-Image-2025-02-27-at-9.51.01-AM-e1740643331796.jpeg" class="gallery image-popup img d-flex align-items-center"
+						style="background-image: url(images/index_page/WhatsApp-Image-2025-02-27-at-9.51.01-AM-e1740643331796.jpeg);">
+						<!-- <div class="icon mb-4 d-flex align-items-center justify-content-center">
 							<span class="icon-instagram"></span>
-						</div>
+						</div> -->
 					</a>
 				</div>
 				<div class="col-md-3 ftco-animate">
-					<a href="images/image_2.jpg" class="gallery image-popup img d-flex align-items-center"
-						style="background-image: url(images/image_2.jpg);">
-						<div class="icon mb-4 d-flex align-items-center justify-content-center">
+					<a href="images/index_page/WhatsApp-Image-2025-02-27-at-10.49.50-AM-2048x1152.jpeg" class="gallery image-popup img d-flex align-items-center"
+						style="background-image: url(images/index_page/WhatsApp-Image-2025-02-27-at-10.49.50-AM-2048x1152.jpeg);">
+						<!-- <div class="icon mb-4 d-flex align-items-center justify-content-center">
 							<span class="icon-instagram"></span>
-						</div>
+						</div> -->
 					</a>
 				</div>
 				<div class="col-md-3 ftco-animate">
-					<a href="images/image_3.jpg" class="gallery image-popup img d-flex align-items-center"
-						style="background-image: url(images/image_3.jpg);">
-						<div class="icon mb-4 d-flex align-items-center justify-content-center">
+					<a href="images/index_page//WhatsApp-Image-2025-02-27-at-10.41.17-AM.jpeg" class="gallery image-popup img d-flex align-items-center"
+						style="background-image: url(images/index_page//WhatsApp-Image-2025-02-27-at-10.41.17-AM.jpeg);">
+						<!-- <div class="icon mb-4 d-flex align-items-center justify-content-center">
 							<span class="icon-instagram"></span>
-						</div>
+						</div> -->
 					</a>
 				</div>
 				<div class="col-md-3 ftco-animate">
-					<a href="images/image_4.jpg" class="gallery image-popup img d-flex align-items-center"
-						style="background-image: url(images/image_4.jpg);">
-						<div class="icon mb-4 d-flex align-items-center justify-content-center">
+					<a href="images/index_page/IMG_20221216_105055.jpg" class="gallery image-popup img d-flex align-items-center"
+						style="background-image: url(images/index_page/IMG_20221216_105055.jpg);">
+						<!-- <div class="icon mb-4 d-flex align-items-center justify-content-center">
 							<span class="icon-instagram"></span>
-						</div>
+						</div> -->
 					</a>
 				</div>
 			</div>
