--- a/contact.html
+++ b/contact.html
@@ -212,7 +212,7 @@
         <script src="assets/js/contact-form-script.js"></script>
         <!-- Custom JS -->
         <script src="assets/js/main.js"></script>
-        <script src="assets/js/navbar-All.js"></script>
-        <script src="assets/js/footer-All.js"></script>
+        <script src="assets/js/navbar-all.js"></script>
+        <script src="assets/js/footer-all.js"></script>
     </body>
 </html>
