--- a/footer-all.html
+++ b/footer-all.html
@@ -87,7 +87,7 @@
                                     <a href="#">Principal's Pen</a>
                                 </li>
                                 <li>
-                                    <a href="#">Career Counselling's</a>
+                                    <a href="#">Career Counselling</a>
                                 </li>
                             </ul>
                         </div>
