Footer Social Links Update

--- a/footer-all.html
+++ b/footer-all.html
@@ -13,25 +13,21 @@
                             <p>The School Previously Known As Maria Montessori Happy Home Was Founded In The Year 1978 At Ramnagar Started In A Rented Building.</p>
                             <ul class="social">
                                 <li>
-                                    <a href="#" target="_blank">
+                                    <a href="https://www.facebook.com/people/Great-Mission-Public-School/61572632937966/" target="_blank">
                                         <i class='bx bxl-facebook'></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" target="_blank">
-                                        <i class='bx bxl-twitter'></i>
+                                    <a href="https://www.youtube.com/@GREATMISSIONFILMS" target="_blank">
+                                        <i class='bx bxl-youtube'></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" target="_blank">
-                                        <i class='bx bxl-pinterest-alt'></i>
+                                    <a href="https://www.instagram.com/thegreatmission1978" target="_blank">
+                                        <i class='bx bxl-instagram'></i>
                                     </a>
                                 </li>
-                                <li>
-                                    <a href="#" target="_blank">
-                                        <i class='bx bxl-linkedin'></i>
-                                    </a>
-                                </li>
+                               
                             </ul>
                         </div>
                     </div>
